--- a/src/app/components/side-nav-bar-links/side-nav-bar-links.component.html
+++ b/src/app/components/side-nav-bar-links/side-nav-bar-links.component.html
@@ -6,25 +6,25 @@
       </a>
     </div>
     <div class="side-nav-bar-links-container3">
-      <a routerLink="/patients" class="side-nav-bar-links-navlink1">
+      <a routerLink="/patients" class="side-nav-bar-links-navlink01">
         <side-nav-main-button
           button="Patients"
           class="side-nav-bar-links-component"
         ></side-nav-main-button>
       </a>
-      <a routerLink="/admission" class="side-nav-bar-links-navlink2">
+      <a routerLink="/admission" class="side-nav-bar-links-navlink02">
         <side-nav-sub-button
           button="Admission/Discharge"
           class="side-nav-bar-links-component01"
         ></side-nav-sub-button>
       </a>
-      <a routerLink="/admit-or-transfer" class="side-nav-bar-links-navlink3">
+      <a routerLink="/admit-or-transfer" class="side-nav-bar-links-navlink03">
         <side-nav-sub-button
           button="Admit/Transfer"
           class="side-nav-bar-links-component02"
         ></side-nav-sub-button>
       </a>
-      <a routerLink="/treatment-records" class="side-nav-bar-links-navlink4">
+      <a routerLink="/treatment-records" class="side-nav-bar-links-navlink04">
         <side-nav-sub-button
           button="Treatment Records"
           class="side-nav-bar-links-component03"
@@ -32,35 +32,60 @@
       </a>
     </div>
     <div class="side-nav-bar-links-container4">
-      <a routerLink="/doctors" class="side-nav-bar-links-navlink5">
+      <a routerLink="/doctors" class="side-nav-bar-links-navlink05">
         <side-nav-main-button
           button="Doctors"
           rootClassName="side-nav-main-button-root-class-name1"
           class="side-nav-bar-links-component04"
         ></side-nav-main-button>
       </a>
-      <a routerLink="/register-doctor" class="side-nav-bar-links-navlink6">
+      <a routerLink="/register-doctor" class="side-nav-bar-links-navlink06">
         <side-nav-sub-button
           button="Register"
           class="side-nav-bar-links-component05"
         ></side-nav-sub-button>
       </a>
-      <side-nav-sub-button button="Teams"></side-nav-sub-button>
+      <a routerLink="/teams" class="side-nav-bar-links-navlink07">
+        <side-nav-sub-button
+          button="Teams"
+          class="side-nav-bar-links-component06"
+        ></side-nav-sub-button>
+      </a>
     </div>
     <div class="side-nav-bar-links-container5">
-      <a routerLink="/wards" class="side-nav-bar-links-navlink7">
+      <a routerLink="/wards" class="side-nav-bar-links-navlink08">
         <side-nav-main-button
           button="Wards"
           class="side-nav-bar-links-component07"
         ></side-nav-main-button>
       </a>
-      <side-nav-sub-button button="Ward Types"></side-nav-sub-button>
-      <side-nav-sub-button button="Ward Availability"></side-nav-sub-button>
+      <a routerLink="/ward-types" class="side-nav-bar-links-navlink09">
+        <side-nav-sub-button
+          button="Ward Types"
+          class="side-nav-bar-links-component08"
+        ></side-nav-sub-button>
+      </a>
+      <a routerLink="/ward-availability" class="side-nav-bar-links-navlink10">
+        <side-nav-sub-button
+          button="Ward Availability"
+          class="side-nav-bar-links-component09"
+        ></side-nav-sub-button>
+      </a>
     </div>
     <div class="side-nav-bar-links-container6">
       <side-nav-main-button button="Admin"></side-nav-main-button>
-      <side-nav-sub-button button="Activity Log"></side-nav-sub-button>
-      <side-nav-sub-button button="Settings"></side-nav-sub-button>
+      <a routerLink="/activity-log" class="side-nav-bar-links-navlink11">
+        <side-nav-sub-button
+          button="Activity Log"
+          class="side-nav-bar-links-component11"
+        ></side-nav-sub-button>
+      </a>
+      <a routerLink="/settings" class="side-nav-bar-links-navlink12">
+        <side-nav-sub-button
+          button="Settings"
+          class="side-nav-bar-links-component12"
+        ></side-nav-sub-button>
+      </a>
     </div>
   </div>
 </div>
