--- a/src/app/components/side-nav-bar/side-nav-bar.component.css
+++ b/src/app/components/side-nav-bar/side-nav-bar.component.css
@@ -126,6 +126,36 @@
   height: auto;
   max-width: 300px;
 }
+.side-nav-bar-root-class-name9 {
+  width: auto;
+  height: auto;
+  max-width: 300px;
+}
+.side-nav-bar-root-class-name10 {
+  width: auto;
+  height: auto;
+  max-width: 300px;
+}
+.side-nav-bar-root-class-name11 {
+  width: auto;
+  height: auto;
+  max-width: 300px;
+}
+.side-nav-bar-root-class-name12 {
+  width: auto;
+  height: auto;
+  max-width: 300px;
+}
+.side-nav-bar-root-class-name13 {
+  width: auto;
+  height: auto;
+  max-width: 300px;
+}
+.side-nav-bar-root-class-name14 {
+  width: auto;
+  height: auto;
+  max-width: 300px;
+}
 @media(max-width: 767px) {
   .side-nav-bar-navbar-interactive {
     padding-left: var(--dl-space-space-twounits);
