--- a/src/app/pages/register-doctor/register-doctor.component.html
+++ b/src/app/pages/register-doctor/register-doctor.component.html
@@ -16,91 +16,114 @@
             </div>
           </div>
           <div class="register-doctor-container08">
-            <div class="register-doctor-container09">
-              <div class="register-doctor-container10">
-                <span class="register-doctor-text01">Title</span>
-                <text-input
-                  rootClassName="text-input-root-class-name55"
-                ></text-input>
-              </div>
-              <div class="register-doctor-container11">
-                <span class="register-doctor-text02">Full Name</span>
-                <text-input
-                  rootClassName="text-input-root-class-name56"
-                ></text-input>
-              </div>
-              <div class="register-doctor-container12">
-                <span class="register-doctor-text03">Doctor&apos;s ID</span>
-                <text-input
-                  rootClassName="text-input-root-class-name57"
-                ></text-input>
-              </div>
-              <div class="register-doctor-container13">
-                <span class="register-doctor-text04">Gender</span>
-                <text-input
-                  rootClassName="text-input-root-class-name58"
-                ></text-input>
-              </div>
-              <div class="register-doctor-container14">
-                <span class="register-doctor-text05">DOB</span>
-                <div class="register-doctor-container15">
-                  <svg viewBox="0 0 1024 1024" class="register-doctor-icon">
-                    <path
-                      d="M810.667 263.851v-7.851c0-70.699-57.301-128-128-128s-128 57.301-128 128h-85.333c0-70.699-57.301-128-128-128s-128 57.301-128 128v7.851c-49.536 17.707-85.333 64.597-85.333 120.149v384c0 70.571 57.429 128 128 128h512c70.571 0 128-57.429 128-128v-384c0-55.552-35.797-102.443-85.333-120.149zM640 256c0-23.552 19.072-42.667 42.667-42.667s42.667 19.115 42.667 42.667v85.333c0 23.552-19.072 42.667-42.667 42.667s-42.667-19.115-42.667-42.667v-85.333zM298.667 256c0-23.552 19.072-42.667 42.667-42.667s42.667 19.115 42.667 42.667v85.333c0 23.552-19.072 42.667-42.667 42.667s-42.667-19.115-42.667-42.667v-85.333zM810.667 768c0 23.509-19.115 42.667-42.667 42.667h-512c-23.552 0-42.667-19.157-42.667-42.667v-256h597.333v256z"
-                    ></path>
-                  </svg>
+            <form class="register-doctor-form">
+              <div class="register-doctor-container09">
+                <div class="register-doctor-container10">
+                  <span class="register-doctor-text01">Title</span>
                   <text-input
-                    rootClassName="text-input-root-class-name67"
+                    rootClassName="text-input-root-class-name55"
                   ></text-input>
                 </div>
-              </div>
-              <div class="register-doctor-container16">
-                <span class="register-doctor-text06">Contact Number</span>
-                <text-input
-                  rootClassName="text-input-root-class-name59"
-                ></text-input>
-              </div>
-            </div>
-            <div class="register-doctor-container17">
-              <div class="register-doctor-container18">
-                <span class="register-doctor-text07">Grade</span>
-                <select class="register-doctor-select">
-                  <option value="DOCTOR" selected>Doctor</option>
-                  <option value="1st Grade Junior Doctor">
-                    1st Grade Junior Doctor
-                  </option>
-                </select>
-              </div>
-              <div class="register-doctor-container19">
-                <span class="register-doctor-text08">Specialization</span>
-                <select class="register-doctor-select1">
-                  <option value="Orthopedic" selected>Orthopedic</option>
-                  <option value="Cardiology">Cardiology</option>
-                  <option value="Maternity ">
-                    Maternity
-                    <span [innerHTML]="raw1bh6"></span>
-                  </option>
-                </select>
+                <div class="register-doctor-container11">
+                  <span class="register-doctor-text02">Full Name</span>
+                  <text-input
+                    rootClassName="text-input-root-class-name56"
+                  ></text-input>
+                </div>
+                <div class="register-doctor-container12">
+                  <span class="register-doctor-text03">Doctor&apos;s ID</span>
+                  <div class="register-doctor-container13">
+                    <input
+                      type="number"
+                      required
+                      placeholder
+                      class="register-doctor-textinput input"
+                    />
+                  </div>
+                </div>
+                <div class="register-doctor-container14">
+                  <span class="register-doctor-text04">Gender</span>
+                  <select required class="register-doctor-select">
+                    <option value="Male" selected>Male</option>
+                    <option value="Female">Female</option>
+                    <option value="Other">Other</option>
+                  </select>
+                </div>
+                <div class="register-doctor-container15">
+                  <span class="register-doctor-text05">DOB</span>
+                  <div class="register-doctor-container16">
+                    <div class="register-doctor-container17">
+                      <input
+                        type="date"
+                        required
+                        placeholder
+                        class="register-doctor-textinput1 input"
+                      />
+                    </div>
+                  </div>
+                </div>
+                <div class="register-doctor-container18">
+                  <span class="register-doctor-text06">Contact Number</span>
+                  <div class="register-doctor-container19">
+                    <input
+                      type="tel"
+                      required
+                      placeholder
+                      class="register-doctor-textinput2 input"
+                    />
+                  </div>
+                </div>
               </div>
               <div class="register-doctor-container20">
-                <span class="register-doctor-text09">Date Joined</span>
                 <div class="register-doctor-container21">
-                  <text-input
-                    rootClassName="text-input-root-class-name69"
-                  ></text-input>
+                  <span class="register-doctor-text07">Grade</span>
+                  <select required class="register-doctor-select1">
+                    <option value="DOCTOR" selected>Doctor</option>
+                    <option value="1st Grade Junior Doctor">
+                      1st Grade Junior Doctor
+                    </option>
+                  </select>
+                </div>
+                <div class="register-doctor-container22">
+                  <span class="register-doctor-text08">Specialization</span>
+                  <select required class="register-doctor-select2">
+                    <option value="Orthopedic" selected>Orthopedic</option>
+                    <option value="Option 1">Option 1</option>
+                    <option value="Cardiology">Cardiology</option>
+                    <option value="Option 2">Option 2</option>
+                    <option value="Maternity">Maternity</option>
+                    <option value="Option 3">Option 3</option>
+                    <option value="Accident &amp; Emergency">
+                      Accident &amp; Emergency
+                    </option>
+                    <option value="Avening">Avening</option>
+                  </select>
+                </div>
+                <div class="register-doctor-container23">
+                  <span class="register-doctor-text09">Date Joined</span>
+                  <div class="register-doctor-container24">
+                    <div class="register-doctor-container25">
+                      <input
+                        type="date"
+                        required
+                        placeholder
+                        class="register-doctor-textinput3 input"
+                      />
+                    </div>
+                  </div>
                 </div>
               </div>
-            </div>
-          </div>
-          <div class="register-doctor-container22">
-            <abstract-button
-              button="Clear Form"
-              rootClassName="abstract-button-root-class-name2"
-            ></abstract-button>
-            <primary-button
-              button="Submit"
-              rootClassName="primary-button-root-class-name16"
-            ></primary-button>
+              <div class="register-doctor-container26">
+                <abstract-button
+                  button="Clear Form"
+                  rootClassName="abstract-button-root-class-name2"
+                ></abstract-button>
+                <primary-button
+                  button="Submit"
+                  rootClassName="primary-button-root-class-name16"
+                ></primary-button>
+              </div>
+            </form>
           </div>
         </div>
       </div>
