--- a/src/app/components/primary-button/primary-button.component.html
+++ b/src/app/components/primary-button/primary-button.component.html
@@ -1,5 +1,5 @@
 <div class="primary-button-container" [ngClass]="rootClassName">
-  <button type="button" class="primary-button-button button">
+  <button type="submit" class="primary-button-button button">
     {{ button }}
   </button>
 </div>
