--- a/src/app/components/top-nav-bar/top-nav-bar.component.css
+++ b/src/app/components/top-nav-bar/top-nav-bar.component.css
@@ -38,8 +38,43 @@
   flex-direction: row;
   justify-content: center;
 }
+.top-nav-bar-thq-dropdown {
+  cursor: pointer;
+  display: inline-block;
+  position: relative;
+  border-radius: var(--dl-radius-radius-radius2);
+}
+.top-nav-bar-dropdown-toggle {
+  fill: #595959;
+  color: #595959;
+  width: 100%;
+  display: inline-flex;
+  align-items: center;
+  padding-top: var(--dl-space-space-halfunit);
+  padding-left: var(--dl-space-space-unit);
+  border-radius: var(--dl-radius-radius-radius2);
+  padding-right: var(--dl-space-space-unit);
+  padding-bottom: var(--dl-space-space-halfunit);
+}
 .top-nav-bar-text {
-  margin-left: var(--dl-space-space-twounits);
+  color: var(--dl-color-default-primary01);
+  font-size: 14px;
+  font-style: normal;
+  text-align: center;
+  font-weight: 500;
+  margin-right: 4px;
+  vertical-align: middle;
+}
+.top-nav-bar-dropdown-arrow {
+  transition: 0.3s;
+}
+.top-nav-bar-icon {
+  fill: var(--dl-color-primary-1);
+  width: 18px;
+  height: 18px;
+  margin-top: auto;
+  transition: 0.3s;
+  margin-bottom: auto;
 }
 .top-nav-bar-image {
   width: 40px;
@@ -48,10 +83,126 @@
   object-fit: cover;
   border-radius: var(--dl-radius-radius-round);
 }
+.top-nav-bar-dropdown-list {
+  left: 0%;
+  width: max-content;
+  display: none;
+  z-index: 100;
+  position: absolute;
+  min-width: 100%;
+  transition: 0.3s;
+  align-items: stretch;
+  border-color: #D9D9D9;
+  border-width: 1px;
+  border-radius: var(--dl-radius-radius-radius4);
+  flex-direction: column;
+  list-style-type: none;
+  background-color: var(--dl-color-gray-white);
+  list-style-position: inside;
+}
+.top-nav-bar-dropdown {
+  cursor: pointer;
+  display: inline-block;
+  position: relative;
+  border-radius: var(--dl-radius-radius-radius2);
+}
+.top-nav-bar-dropdown-toggle1 {
+  fill: #595959;
+  color: #595959;
+  width: 100%;
+  display: inline-flex;
+  transition: 0.3s;
+  align-items: center;
+  padding-top: var(--dl-space-space-halfunit);
+  padding-left: var(--dl-space-space-unit);
+  border-radius: var(--dl-radius-radius-radius4);
+  padding-right: var(--dl-space-space-unit);
+  padding-bottom: var(--dl-space-space-halfunit);
+  text-decoration: none;
+}
+.top-nav-bar-dropdown-toggle1:hover {
+  fill: #fff;
+  color: #fff;
+  background-color: #595959;
+}
+.top-nav-bar-text1 {
+  width: 100%;
+  cursor: pointer;
+  display: flex;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 500;
+}
+.top-nav-bar-dropdown1 {
+  cursor: pointer;
+  display: inline-block;
+  position: relative;
+  border-radius: var(--dl-radius-radius-radius2);
+}
+.top-nav-bar-dropdown-toggle2 {
+  fill: #595959;
+  color: #595959;
+  width: 100%;
+  display: inline-flex;
+  transition: 0.3s;
+  align-items: center;
+  padding-top: var(--dl-space-space-halfunit);
+  padding-left: var(--dl-space-space-unit);
+  border-radius: var(--dl-radius-radius-radius4);
+  padding-right: var(--dl-space-space-unit);
+  padding-bottom: var(--dl-space-space-halfunit);
+  text-decoration: none;
+}
+.top-nav-bar-dropdown-toggle2:hover {
+  fill: #fff;
+  color: #fff;
+  background-color: #595959;
+}
+.top-nav-bar-text2 {
+  width: 100%;
+  cursor: pointer;
+  display: flex;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 500;
+}
+.top-nav-bar-dropdown2 {
+  cursor: pointer;
+  display: inline-block;
+  position: relative;
+  border-radius: var(--dl-radius-radius-radius2);
+}
+.top-nav-bar-dropdown-toggle3 {
+  fill: #595959;
+  color: #595959;
+  width: 100%;
+  display: inline-flex;
+  transition: 0.3s;
+  align-items: center;
+  padding-top: var(--dl-space-space-halfunit);
+  padding-left: var(--dl-space-space-unit);
+  border-radius: var(--dl-radius-radius-radius4);
+  padding-right: var(--dl-space-space-unit);
+  padding-bottom: var(--dl-space-space-halfunit);
+  text-decoration: none;
+}
+.top-nav-bar-dropdown-toggle3:hover {
+  fill: #fff;
+  color: #fff;
+  background-color: #595959;
+}
+.top-nav-bar-text3 {
+  width: 100%;
+  cursor: pointer;
+  display: flex;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 500;
+}
 .top-nav-bar-burger-menu {
   display: none;
 }
-.top-nav-bar-icon {
+.top-nav-bar-icon2 {
   width: var(--dl-size-size-xsmall);
   height: var(--dl-size-size-xsmall);
 }
@@ -103,7 +254,7 @@
   align-items: center;
   flex-direction: column;
 }
-.top-nav-bar-text1 {
+.top-nav-bar-text4 {
   color: var(--dl-color-primary-1);
   align-self: center;
   text-align: center;
@@ -113,7 +264,7 @@
   align-items: center;
   justify-content: center;
 }
-.top-nav-bar-icon2 {
+.top-nav-bar-icon4 {
   width: var(--dl-size-size-xsmall);
   height: var(--dl-size-size-xsmall);
 }
@@ -135,7 +286,7 @@
   object-fit: cover;
   border-radius: var(--dl-radius-radius-round);
 }
-.top-nav-bar-text3 {
+.top-nav-bar-text6 {
   margin-left: var(--dl-space-space-twounits);
 }
 .top-nav-bar-container4 {
@@ -144,13 +295,13 @@
   flex-direction: row;
   justify-content: center;
 }
-.top-nav-bar-navlink1 {
+.top-nav-bar-navlink4 {
   display: contents;
 }
 .top-nav-bar-component1 {
   text-decoration: none;
 }
-.top-nav-bar-navlink2 {
+.top-nav-bar-navlink5 {
   display: contents;
 }
 .top-nav-bar-component2 {
@@ -181,6 +332,24 @@
   align-self: center;
 }
 .top-nav-bar-root-class-name8 {
+  align-self: center;
+}
+.top-nav-bar-root-class-name9 {
+  align-self: center;
+}
+.top-nav-bar-root-class-name10 {
+  align-self: center;
+}
+.top-nav-bar-root-class-name11 {
+  align-self: center;
+}
+.top-nav-bar-root-class-name12 {
+  align-self: center;
+}
+.top-nav-bar-root-class-name13 {
+  align-self: center;
+}
+.top-nav-bar-root-class-name14 {
   align-self: center;
 }
 @media(max-width: 991px) {
