--- a/src/app/pages/settings/settings.component.css
+++ b/src/app/pages/settings/settings.component.css
@@ -1,7 +1,7 @@
 :host { 
   display: contents; 
 }
-.register-doctor-container {
+.settings-container {
   width: 100%;
   display: flex;
   overflow: auto;
@@ -10,7 +10,7 @@
   flex-direction: column;
   justify-content: flex-start;
 }
-.register-doctor-container01 {
+.settings-container01 {
   width: 100%;
   height: 100vh;
   display: flex;
@@ -18,7 +18,7 @@
   flex-direction: column;
   justify-content: flex-start;
 }
-.register-doctor-container02 {
+.settings-container02 {
   flex: 0 0 auto;
   width: 100%;
   display: flex;
@@ -27,14 +27,14 @@
   flex-direction: column;
   justify-content: flex-start;
 }
-.register-doctor-container03 {
+.settings-container03 {
   flex: 0 0 auto;
   width: 100%;
   height: 100%;
   display: flex;
   align-items: flex-start;
 }
-.register-doctor-container04 {
+.settings-container04 {
   flex: 1;
   width: 100%;
   height: 100%;
@@ -44,7 +44,7 @@
   align-items: flex-start;
   flex-direction: column;
 }
-.register-doctor-container05 {
+.settings-container05 {
   flex: 1;
   width: 100%;
   height: 100vh;
@@ -54,93 +54,84 @@
   flex-direction: column;
   justify-content: flex-start;
 }
-.register-doctor-container06 {
+.settings-container06 {
   width: 100%;
   display: flex;
   align-items: flex-start;
   flex-direction: column;
   justify-content: flex-start;
 }
-.register-doctor-container07 {
+.settings-container07 {
   width: 100%;
   display: flex;
   align-items: flex-start;
   flex-direction: column;
   justify-content: flex-start;
 }
-.register-doctor-text {
+.settings-text {
   color: var(--dl-color-primary-1);
   font-size: 28px;
   font-style: normal;
   text-align: center;
   font-weight: 600;
 }
-.register-doctor-container08 {
+.settings-container08 {
+  gap: var(--dl-space-space-twounits);
   width: 100%;
   display: flex;
   align-items: center;
   padding-top: var(--dl-space-space-twounits);
-  padding-left: var(--dl-space-space-sixunits);
-  padding-right: var(--dl-space-space-sixunits);
+  padding-left: var(--dl-space-space-unit);
+  padding-right: var(--dl-space-space-unit);
   flex-direction: column;
   padding-bottom: var(--dl-space-space-twounits);
   justify-content: flex-start;
 }
-.register-doctor-form {
+.settings-form {
   width: 100%;
   height: auto;
   display: flex;
   flex-direction: column;
 }
-.register-doctor-container09 {
+.settings-container09 {
   width: 100%;
   display: flex;
+  padding: var(--dl-space-space-halfunit);
   align-items: center;
+  flex-direction: row;
+  justify-content: flex-start;
+}
+.settings-container10 {
+  gap: var(--dl-space-space-twounits);
+  flex: 0 0 auto;
+  width: 100%;
+  height: auto;
+  display: flex;
+  align-items: flex-start;
+  flex-direction: row;
+  justify-content: flex-start;
+}
+.settings-container11 {
+  width: 100%;
+  display: flex;
+  align-items: flex-start;
   flex-direction: column;
   justify-content: flex-start;
 }
-.register-doctor-container10 {
+.settings-container12 {
   width: 100%;
   display: flex;
   align-items: center;
   flex-direction: row;
   justify-content: space-between;
 }
-.register-doctor-text01 {
+.settings-text1 {
   color: var(--dl-color-primary-1);
   width: auto;
   text-align: left;
 }
-.register-doctor-container11 {
-  width: 100%;
-  display: flex;
-  position: relative;
-  align-self: center;
-  align-items: center;
-  flex-direction: row;
-  justify-content: space-between;
-}
-.register-doctor-text02 {
-  color: var(--dl-color-primary-1);
+.settings-container13 {
   width: auto;
-  text-align: left;
-}
-.register-doctor-container12 {
-  width: 100%;
-  display: flex;
-  position: relative;
-  align-self: center;
-  align-items: center;
-  flex-direction: row;
-  justify-content: space-between;
-}
-.register-doctor-text03 {
-  color: var(--dl-color-primary-1);
-  width: auto;
-  text-align: left;
-}
-.register-doctor-container13 {
-  width: 60%;
   display: flex;
   position: relative;
   margin-top: var(--dl-space-space-halfunit);
@@ -149,104 +140,12 @@
   border-radius: var(--dl-radius-radius-radius4);
   margin-bottom: var(--dl-space-space-halfunit);
 }
-.register-doctor-textinput {
+.settings-textinput {
   width: 100%;
   border-width: 0px;
   border-radius: var(--dl-radius-radius-radius8);
 }
-.register-doctor-container14 {
-  width: 100%;
-  display: flex;
-  position: relative;
-  align-self: center;
-  align-items: center;
-  flex-direction: row;
-  justify-content: space-between;
-}
-.register-doctor-text04 {
-  color: var(--dl-color-primary-1);
-  width: auto;
-  text-align: left;
-}
-.register-doctor-select {
-  padding: var(--dl-space-space-unit);
-  padding-left: 16px;
-  padding-bottom: 16px;
-}
-.register-doctor-container15 {
-  width: 100%;
-  display: flex;
-  position: relative;
-  align-self: center;
-  align-items: center;
-  flex-direction: row;
-  justify-content: space-between;
-}
-.register-doctor-text05 {
-  color: var(--dl-color-primary-1);
-  width: auto;
-  text-align: left;
-}
-.register-doctor-container16 {
-  gap: var(--dl-space-space-halfunit);
-  display: flex;
-  align-items: center;
-  flex-direction: row;
-  justify-content: center;
-}
-.register-doctor-container17 {
-  width: 100%;
-  display: flex;
-  position: relative;
-  margin-top: var(--dl-space-space-halfunit);
-  border-color: var(--dl-color-gray-black);
-  border-width: 1px;
-  border-radius: var(--dl-radius-radius-radius4);
-  margin-bottom: var(--dl-space-space-halfunit);
-}
-.register-doctor-textinput1 {
-  width: 100%;
-  border-width: 0px;
-  border-radius: var(--dl-radius-radius-radius8);
-}
-.register-doctor-container18 {
-  width: 100%;
-  display: flex;
-  position: relative;
-  align-self: center;
-  align-items: center;
-  flex-direction: row;
-  justify-content: space-between;
-}
-.register-doctor-text06 {
-  color: var(--dl-color-primary-1);
-  width: auto;
-  text-align: left;
-}
-.register-doctor-container19 {
-  width: 60%;
-  display: flex;
-  position: relative;
-  margin-top: var(--dl-space-space-halfunit);
-  border-color: var(--dl-color-gray-black);
-  border-width: 1px;
-  border-radius: var(--dl-radius-radius-radius4);
-  margin-bottom: var(--dl-space-space-halfunit);
-}
-.register-doctor-textinput2 {
-  width: 100%;
-  border-width: 0px;
-  border-radius: var(--dl-radius-radius-radius8);
-}
-.register-doctor-container20 {
-  width: 100%;
-  display: flex;
-  align-self: flex-start;
-  align-items: center;
-  flex-direction: column;
-  justify-content: flex-start;
-}
-.register-doctor-container21 {
+.settings-container14 {
   width: 100%;
   height: auto;
   display: flex;
@@ -255,17 +154,15 @@
   flex-direction: row;
   justify-content: space-between;
 }
-.register-doctor-text07 {
+.settings-text2 {
   color: var(--dl-color-primary-1);
   width: auto;
   text-align: left;
 }
-.register-doctor-select1 {
+.settings-select {
   padding: var(--dl-space-space-unit);
-  padding-left: 16px;
-  padding-bottom: 16px;
 }
-.register-doctor-container22 {
+.settings-container15 {
   width: 100%;
   height: auto;
   display: flex;
@@ -274,39 +171,13 @@
   flex-direction: row;
   justify-content: space-between;
 }
-.register-doctor-text08 {
+.settings-text3 {
   color: var(--dl-color-primary-1);
   width: auto;
   text-align: left;
 }
-.register-doctor-select2 {
-  padding: var(--dl-space-space-unit);
-  padding-left: 16px;
-  padding-bottom: 16px;
-}
-.register-doctor-container23 {
-  width: 100%;
-  height: auto;
-  display: flex;
-  align-self: flex-start;
-  align-items: center;
-  flex-direction: row;
-  justify-content: space-between;
-}
-.register-doctor-text09 {
-  color: var(--dl-color-primary-1);
+.settings-container16 {
   width: auto;
-  text-align: left;
-}
-.register-doctor-container24 {
-  gap: var(--dl-space-space-halfunit);
-  display: flex;
-  align-items: center;
-  flex-direction: row;
-  justify-content: center;
-}
-.register-doctor-container25 {
-  width: 100%;
   display: flex;
   position: relative;
   margin-top: var(--dl-space-space-halfunit);
@@ -315,14 +186,71 @@
   border-radius: var(--dl-radius-radius-radius4);
   margin-bottom: var(--dl-space-space-halfunit);
 }
-.register-doctor-textinput3 {
+.settings-textinput1 {
   width: 100%;
   border-width: 0px;
   border-radius: var(--dl-radius-radius-radius8);
 }
-.register-doctor-container26 {
-  flex: 1;
+.settings-container17 {
   width: 100%;
+  height: auto;
+  display: flex;
+  align-self: flex-start;
+  align-items: center;
+  flex-direction: row;
+  justify-content: space-between;
+}
+.settings-text4 {
+  color: var(--dl-color-primary-1);
+  width: auto;
+  text-align: left;
+}
+.settings-container18 {
+  width: auto;
+  display: flex;
+  position: relative;
+  margin-top: var(--dl-space-space-halfunit);
+  border-color: var(--dl-color-gray-black);
+  border-width: 1px;
+  border-radius: var(--dl-radius-radius-radius4);
+  margin-bottom: var(--dl-space-space-halfunit);
+}
+.settings-textinput2 {
+  width: 100%;
+  border-width: 0px;
+  border-radius: var(--dl-radius-radius-radius8);
+}
+.settings-container19 {
+  width: 100%;
+  height: auto;
+  display: flex;
+  align-self: flex-start;
+  align-items: center;
+  flex-direction: row;
+  justify-content: space-between;
+}
+.settings-text5 {
+  color: var(--dl-color-primary-1);
+  width: auto;
+  text-align: left;
+}
+.settings-container20 {
+  width: auto;
+  display: flex;
+  position: relative;
+  margin-top: var(--dl-space-space-halfunit);
+  border-color: var(--dl-color-gray-black);
+  border-width: 1px;
+  border-radius: var(--dl-radius-radius-radius4);
+  margin-bottom: var(--dl-space-space-halfunit);
+}
+.settings-textinput3 {
+  width: 100%;
+  border-width: 0px;
+  border-radius: var(--dl-radius-radius-radius8);
+}
+.settings-container21 {
+  width: 252px;
   display: flex;
   align-self: flex-end;
   align-items: center;
@@ -330,7 +258,7 @@
   justify-content: flex-start;
 }
 @media(max-width: 991px) {
-  .register-doctor-container05 {
+  .settings-container05 {
     align-items: center;
     flex-direction: column;
   }
